# docking-benchmark

./: .gitignore  CHANGELOG_ENVIRONMENTS.md  CHANGELOG_SMILES.md  Dockerfile  LICENSE  README.md  Singularity.def  environment.yml  installation.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
config/: default_config.yaml  interaction_protein_ligand.json  methods_config.yaml  slurm_config.yaml
data/input/: hERG_Ki_WT_curated.csv
data/input/ligands/: hERG_Ki_WT_curated.csv
data/processed/boxes/: 1ere.json  8zyq.json  boxes_summary.json
data/processed/proteins/: 1ere.pdbqt  8spd.pdbqt  8zyq.pdbqt  preparation_manifest.json
data/results/: docking_errors_boltz2.json  docking_errors_qvina.json
data/results/metrics/: metrics_qvina_old.csv
data/results/reports/: method_comparison.csv  report.html  report.json
docs/: contributing.md  environments.md  input_format.md  installation.md  methods.md  metrics.md  usage.md
scripts/: run_benchmark.sh  run_slurm.sh  setup_environment.sh  validate_installations.sh
src/docking_benchmark/: __init__.py  config.py  main.py
src/docking_benchmark/cli/: __init__.py  analyze_results.py  compare_methods.py  run_benchmark.py
src/docking_benchmark/docking/: __init__.py  base.py  dynamicbind.py  gnina.py  interformer.py  plapt.py  qvina.py  unimol.py
src/docking_benchmark/evaluation/: __init__.py  collector.py  reporter.py  statistics.py
src/docking_benchmark/metrics/: __init__.py  affinity.py  clash.py
src/docking_benchmark/preprocessing/: __init__.py  box_preparation.py  ligand_prep.py  (+1 more)
(+12381 files in other folders)
